@@ -1,5 +1,6 @@
 package com.zapplay.auth.config;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -45,8 +46,11 @@ public class SecurityConfig {
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration config = new CorsConfiguration();
 
-		config.setAllowedOrigins(List.of("http://127.0.0.1:5500", "http://localhost:5500", "http://192.168.1.8:5500",
-				"https://your-netlify-site.netlify.app")); // Frontend origin
+//
+//		config.setAllowedOrigins(List.of("http://127.0.0.1:5500", "http://localhost:5500", "http://192.168.1.8:5500",
+//				"https://your-netlify-site.netlify.app")); // Frontend origin
+        config.setAllowedOrigins(Arrays.asList("*"));
+
 		config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 		config.setAllowedHeaders(List.of("*"));
 		config.setAllowCredentials(true); // Send cookies like JSESSIONID
